--- a/src/main/webapp/css/styles.css
+++ b/src/main/webapp/css/styles.css
@@ -1,326 +1,599 @@
 /*
 Author: ZeroLab
 */
-@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,600); 
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,800,600);
 @import url(https://fonts.googleapis.com/css?family=Audiowide);
 body {
-	color:#FFF;
-	font-family: 'Open Sans', sans-serif;
-	height:100%;
-	width:100%;
-	margin:0;
-	background: #000000;
+    color: #fff;
+    font-family: "Open Sans", sans-serif;
+    height: 100%;
+    width: 100%;
+    margin: 0;
+    background: linear-gradient(to right, #636396, #02021d);
+    /* background-image: url("/img/GettyImages-1150039017.jpg"); */
 }
 .ie body {
-	filter: dropshadow(color=#000000, offx=0, offy=1);	
+    filter: dropshadow(color=#000000, offx=0, offy=1);
 }
 h1 {
-	font-size:68px;
-	/* letter-spacing:-2px; */
-	text-align:center;
-	padding-top:30px;
-	font-weight: 400;
-	font-family: 'Audiowide', cursive;
-	text-shadow: 0px 1px 1px rgba(12, 11, 11, 0.56);
+    font-size: 68px;
+    /* letter-spacing:-2px; */
+    text-align: center;
+    /* padding-top: 30px; */
+    font-weight: 400;
+    font-family: "Audiowide", cursive;
+    text-shadow: 0px 1px 1px rgba(12, 11, 11, 0.56);
 }
 .ie h1 {
-	filter: dropshadow(color=#000000, offx=0, offy=3);
-	padding-bottom:12px;	
-} 
+    filter: dropshadow(color=#000000, offx=0, offy=3);
+    padding-bottom: 12px;
+}
 .ie h2 {
-	filter: dropshadow(color=#000000, offx=0, offy=3);
+    filter: dropshadow(color=#000000, offx=0, offy=3);
 }
 h3 {
-	font-size:25px;
-	margin:0.2em 0; 
+    font-size: 25px;
+    margin: 0.2em 0;
 }
 .ie h3 {
-	filter: dropshadow(color=#000000, offx=0, offy=3);
+    filter: dropshadow(color=#000000, offx=0, offy=3);
 }
 h4 {
-	margin-bottom:5px;	
+    margin-bottom: 5px;
 }
-p, pre {
-	margin:0 0 10px 0; 
+p,
+pre {
+    margin: 0 0 10px 0;
 }
 .large-header {
-	position: relative;
-	width: 100%;
-	background: #333;
-	overflow: hidden;
-	background-size: cover;
-	background-position: center center;
-	z-index: 0;
-	position: absolute;
-	height: 100% !important;
-	bottom: 0px;
+    position: relative;
+    width: 100%;
+    background: #333;
+    overflow: hidden;
+    background-size: cover;
+    background-position: center center;
+    z-index: 0;
+    position: absolute;
+    height: 100% !important;
+    bottom: 0px;
 }
 
 .large-header {
-	background-image: url('../img/demo-1-bg.jpg');
+    background-image: url("/img/GettyImages-1150039017.jpg");
+}
+
+.ZH-bnt-block {
+    display: flex;
+    justify-content: center;
+    margin: 40px auto;
+}
+
+.button_1623083733844 {
+    display: flex;
+    text-decoration: none !important;
+    background-color: #eaeaea !important;
+    color: #27373e;
+    border: 3px solid #044a66 !important;
+    border-radius: 15px !important;
+    font-size: 27px;
+    padding: 15px 15px !important;
+    transition: all 0.4s ease !important;
+}
+.button_1623083733844:hover {
+    text-decoration: none !important;
+    background-color: #00435b !important;
+    color: #ffffff !important;
+    border-color: #0c3d54 !important;
+}
+.btn-zh {
+    background-color: #eaeaea !important;
+    color: #27373e;
+    border: 3px solid #044a66 !important;
+    border-radius: 15px !important;
+    font-size: 27px;
+    padding: 15px 15px !important;
+    transition: all 0.4s ease !important;
+}
+.btn-zh:hover {
+    background-color: #00435b !important;
+    color: #ffffff !important;
+    border-color: #0c3d54 !important;
+}
+.ZH-bnt-block-small {
+    display: flex;
+    justify-content: center;
+    margin: 0 auto;
+}
+.btn-zh-small {
+    font-size: 20px;
+    padding: 5px 5px !important;
+}
+
+.form-contact {
+    margin-top: 60px;
+    width: 100%;
+    max-width: 600px;
+    color: #fff;
+    font-family: "Open Sans", sans-serif;
+}
+
+.form-title {
+    color: #eaeaea;
+    font-size: 40px;
+}
+.form-control {
+    padding: 0;
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+}
+.form-label {
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    font-weight: normal;
+}
+.form-select {
+    color: #000000;
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+}
+.checkbox__label {
+    font-family: "Open Sans", sans-serif;
+    font-size: 20px;
+    margin-left: 10px;
+}
+#formAgreement {
+    margin-left: 0;
+    width: 20px;
+    height: 20px;
+}
+
+.intro {
+    margin-top: 50px;
+    display: flex;
+    font-size: 22px;
+    font-weight: normal;
+}
+
+.intro-text {
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    padding: 30px;
+    background-color: rgba(14, 13, 48, 0.897);
+    text-align: center;
+}
+.info-wrapper {
+    display: flex;
+    justify-content: center;
+}
+
+.bottom-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.info {
+    /* margin-top: 50px; */
+    margin: 50px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    font-size: 22px;
+    font-weight: normal;
+    width: 90%;
+    max-width: 600px;
+    background-color: rgba(14, 13, 48, 0.897);
+}
+
+.info-text {
+    width: 90%;
+    padding: 10px;
+    margin-left: 20px;
+}
+.info-value {
+    color: #175de2;
+}
+.info-color1 {
+    color: rgb(0, 253, 0);
+}
+
+.info-color2 {
+    color: red;
+}
+
+.disklaimer {
+    display: flex;
+    justify-content: center;
+    margin: 40px auto;
+}
+
+.disklaimer-link {
+    color: #eaeaea;
+}
+
+.disklaimer-link:hover {
+    color: white;
+}
+.section-heading,
+h2 {
+    font-size: large;
+    margin: auto;
 }
 
 code {
-	text-transform:uppercase !important;
-	color:#EEE;	
-	border-bottom:1px dotted #666;
+    text-transform: uppercase !important;
+    color: #eee;
+    border-bottom: 1px dotted #666;
 }
 small {
-	background:url(../images/alpha.png);
-	background:rgba(0, 0, 0, 0.8) url();	
-	border:1px solid #111;
-	font-size:15px;
-	padding:0 5px;
+    background: url(../images/alpha.png);
+    background: rgba(0, 0, 0, 0.8) url();
+    border: 1px solid #111;
+    font-size: 15px;
+    padding: 0 5px;
 }
 a {
-	color: #7b7b7b;
-	text-decoration:none;
+    color: #7b7b7b;
+    text-decoration: none;
 }
 a:hover {
-	color:#E3ECFF;	
-} 
-a.logo{
-	color: #FFF;
-	float: right;
-} 
-#header {margin-bottom: 62px;position: relative;width: 100%;height: 82px;line-height: 82px;z-index: 1;}
-.wrapper {margin: 0 auto;position: relative;z-index: 1;width: 1170px;text-align: right;}
-#socialIcons {display:block;margin: 20px 0 0;/* float: right; *//* text-align: right; */}
+    color: #e3ecff;
+}
+a.logo {
+    color: #fff;
+    float: right;
+}
+#header {
+    margin-bottom: 62px;
+    position: relative;
+    width: 100%;
+    height: 82px;
+    line-height: 82px;
+    z-index: 1;
+}
+.wrapper {
+    margin: 0 auto;
+    position: relative;
+    z-index: 1;
+    width: 1170px;
+    /* text-align: right; */
+}
+.zh-wrapper {
+    display: flex;
+    justify-content: center;
+}
+.info-wrapper {
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+}
+#socialIcons {
+    display: block;
+    margin: 20px 0 0; /* float: right; */ /* text-align: right; */
+}
 #socialIcons ul {
-margin: 0px; 
-padding:0px;
-text-align: center;
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
 }
 #socialIcons ul li {
-margin-right: 5px;
-height: 34px;
-line-height: 34px;
-list-style-type: none;
-display: inline-block; 
+    margin-right: 5px;
+    height: 34px;
+    line-height: 34px;
+    list-style-type: none;
+    display: inline-block;
 }
-#socialIcons ul li a{
-width:34px;
-height:34px; 
-display: inline-block;
+#socialIcons ul li a {
+    width: 34px;
+    height: 34px;
+    display: inline-block;
 }
-.twitterIcon, .facebookIcon, .linkedInIcon, .pintrestIcon{background: url('../images/social-icons.png') -74px 0px;}
-.facebookIcon{
-background-position: 10px 0px;
+.twitterIcon,
+.facebookIcon,
+.linkedInIcon,
+.pintrestIcon {
+    background: url("../images/social-icons.png") -74px 0px;
 }
-.linkedInIcon{
-background-position: -245px 0px;
+.facebookIcon {
+    background-position: 10px 0px;
 }
-.pintrestIcon{
-background-position: -331px 0px;
+.linkedInIcon {
+    background-position: -245px 0px;
 }
-.tempBy{display:block;text-align: right;margin-top:40px;font-size: 13px;color: #fff;}
-#Content h2 {display: block;margin: 25px 0 42px;padding: 0px;text-align: right;font-size: 24px;font-weight: 300;color: #fff;line-height: 42px;text-transform: capitalize;}
+.pintrestIcon {
+    background-position: -331px 0px;
+}
+.tempBy {
+    display: block;
+    text-align: right;
+    margin-top: 40px;
+    font-size: 13px;
+    color: #fff;
+}
+#Content h2 {
+    /* display: block; */
+    margin: 25px auto;
+    padding: 0px;
+    text-align: center;
+    font-size: 42px;
+    font-weight: 300;
+    color: #fff;
+    line-height: 42px;
+    /* text-transform: capitalize; */
+}
 #WindowSlide {
-margin: 0 auto;
-position: relative;
-width: 634px;
-height: 170px;
-display: block;
-overflow: hidden;
+    margin: 0 auto;
+    position: relative;
+    width: 634px;
+    height: 170px;
+    display: block;
+    overflow: hidden;
 }
 #Mail {
-position: absolute;
-width: 634px;
-top: 0px;
-left: 0px;
+    position: absolute;
+    width: 634px;
+    top: 0px;
+    left: 0px;
 }
 #Content h3 {
-text-align: center;
-font-size: 20px;
-font-weight: normal;
-display: block;
-clear: both;
+    text-align: center;
+    font-size: 20px;
+    font-weight: normal;
+    display: block;
+    clear: both;
 }
 
-#subscribe p{text-align: right;}
-#subscribe input {color: #c3c3c3;vertical-align: middle;width: 260px;border: 1px solid #f1f1f1;padding: 0 10px;height: 50px;text-align: left;background: transparent;font-size: 14px;}
-#subscribe input[type="submit"]{background: rgb(6, 6, 6);width: auto;padding: 0px 25px;cursor: pointer;margin-left: -5px;font-weight: 600;height: 52px;display: inline-block;color: #fff;font-size: 16px;text-transform: uppercase;}
-
+#subscribe p {
+    text-align: right;
+}
+#subscribe input {
+    color: #c3c3c3;
+    vertical-align: middle;
+    width: 260px;
+    border: 1px solid #f1f1f1;
+    padding: 0 10px;
+    height: 50px;
+    text-align: left;
+    background: transparent;
+    font-size: 14px;
+}
+#subscribe input[type="submit"] {
+    background: rgb(6, 6, 6);
+    width: auto;
+    padding: 0px 25px;
+    cursor: pointer;
+    margin-left: -5px;
+    font-weight: 600;
+    height: 52px;
+    display: inline-block;
+    color: #fff;
+    font-size: 16px;
+    text-transform: uppercase;
+}
 
 .callback,
 .simple {
-  font-size: 20px;
-  background: #27ae60;
-  padding: 0.5em 0.7em;
-  color: #ecf0f1;
-  margin-bottom: 50px;
-  -webkit-transition: background 0.5s ease-out;
-  transition: background 0.5s ease-out;
+    font-size: 20px;
+    background: #27ae60;
+    padding: 0.5em 0.7em;
+    color: #ecf0f1;
+    margin-bottom: 50px;
+    -webkit-transition: background 0.5s ease-out;
+    transition: background 0.5s ease-out;
 }
-.callback{
-  cursor: pointer;
+.callback {
+    cursor: pointer;
 }
 .ended {
-  background: #c0392b;
+    background: #c0392b;
 }
 .countdown {
-text-align:center;
+    text-align: center;
 }
-.intro{
-font-size:22px;
-font-weight:normal;
-margin-bottom:30px;
+
+.styled {
+    padding: 90px 0 40px;
+    display: block;
+    float: right;
 }
-.styled{
-  padding: 90px 0 40px;
-  display: block;
-  float: right;
+.styled div {
+    display: inline-block;
+    font-size: 80px;
+    font-weight: 400;
+    text-align: center;
+    margin: 0 1px;
+    width: 136px;
+    padding: 10px 30px 53px;
+    height: 100px; /* background: rgba(255, 255, 255, 0.18); */
+    text-shadow: none;
+    vertical-align: middle;
+    border: 1px dashed rgba(255, 255, 255, 0.36);
+    text-shadow: 1px 0px 2px rgba(12, 11, 11, 0.56);
 }
-.styled div {display: inline-block;font-size: 80px;font-weight: 400;text-align: center;margin: 0 1px;width: 136px;padding: 10px 30px 53px;height: 100px;/* background: rgba(255, 255, 255, 0.18); */text-shadow: none;vertical-align: middle;border: 1px dashed rgba(255, 255, 255, 0.36);text-shadow: 1px 0px 2px rgba(12, 11, 11, 0.56);}
-.styled div:last-child{/* border:none; */}
-#overlay{ 
-background: rgba(0, 0, 0, 0.04) url(../images/overlays/06.png) top left repeat;
-background:rgba(0, 0, 0, 0.14);
-position: fixed;
-top: 0px;
-width: 100%;
-bottom: 0px;
-opacity:0.8;
+
+#overlay {
+    background: rgba(0, 0, 0, 0.04) url(../images/overlays/06.png) top left
+        repeat;
+    background: rgba(0, 0, 0, 0.14);
+    position: fixed;
+    top: 0px;
+    width: 100%;
+    bottom: 0px;
+    opacity: 0.8;
 }
 /* IE7 inline-block hack */
-*+html .styled div{
-  display: inline;
-  zoom: 1;
+* + html .styled div {
+    display: inline;
+    zoom: 1;
 }
 .styled div:first-child {
-  margin-left: 0;
+    margin-left: 0;
 }
-.styled div span {display: block;padding-top: 3px;font-size: 17px;font-weight: 400;text-align: center;}
-footer{
-width:100%;
-height:30px;
-background:rgba(0, 0, 0, 0.64);
-position:absolute;
-bottom:0px;
+.styled div span {
+    display: block;
+    padding-top: 3px;
+    font-size: 17px;
+    font-weight: 400;
+    text-align: center;
 }
-footer span{
-float:right;
-margin:10px;
-}
-.top-wrapper{
-	width:100%;
-	padding: 0;
-	/* background: #EC253F; */
-	float: left;
-}
-.bottom-wrapper{
-	/* width: 90%; */
-	padding: 34px 0;
-	/* background:#fff; */
-	float: left;
-}
-#subscribe input[type="submit"]:hover{
-	background: #175de2;
-	color: #fff;
-	border-color: #ffffff;
-}
-.tempBy a:hover{color: #444;}
-@media(max-width:998px){
-		body {
-	min-width: initial !important;
-	}
-	#header {
-    /* margin-bottom: 78px; */
-    position: relative;
+footer {
     width: 100%;
-    /* height: 45px; */
-    /* line-height: 35px; */
-    z-index: 1;
+    height: 30px;
+    background: rgba(0, 0, 0, 0.64);
+    position: absolute;
+    bottom: 0px;
 }
-	.wrapper{width: 90%;}
-	.styled div {
-	  margin-bottom:10px; 
-	}
-	
+footer span {
+    float: right;
+    margin: 10px;
 }
-@media(max-width:768px){
-	body {
-	min-width: initial !important;
-	}
-	.wrapper{width: 90%;}
-	.styled div {
-	  margin-bottom:10px; 
-	  font-size:34px;
-	      font-size: 68px;
-	}
-	.styled div:nth-child(2){
-		/* border-right:none; */
-	}
-	.styled div span{
-		font-size:14px;
-	}
-	#Content h2 {
-		display: block;
-		margin: 0px 0 29px;
-		padding: 0px;
-		/* text-align: center; */
-		font-size: 21px;
-		font-weight: 300;
-	}
+.top-wrapper {
+    width: 100%;
+    /* padding: 0; */
+    /* margin: 60px auto; */
+    /* background: #EC253F; */
+    /* float: left; */
 }
-@media(max-width:420px){
-h1{
-adding-top: 16px;
-}	
-#header {
-    margin-bottom: 30px;
+.bottom-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* width: 90%; */
+    /* padding: 20px 0; */
+    /* background:#fff; */
+    /* float: left; */
 }
-	#subscribe input[type="submit"]{
-	margin-top:10px;
-	}
-	#subscribe input{
-	width:80%;
-	}
-	footer{
-	position:relative !important;
-	}
+#subscribe input[type="submit"]:hover {
+    background: #175de2;
+    color: #fff;
+    border-color: #ffffff;
 }
-
-
-    /*==========  Mobile First Method  ==========*/
-
-    /* Custom, iPhone Retina */ 
-    @media only screen and (min-width : 320px) {
-
+.tempBy a:hover {
+    color: #444;
+}
+@media (max-width: 998px) {
+    body {
+        min-width: initial !important;
+    }
+    #header {
+        /* margin-bottom: 78px; */
+        position: relative;
+        width: 100%;
+        /* height: 45px; */
+        /* line-height: 35px; */
+        z-index: 1;
+    }
+    .wrapper {
+        width: 90%;
+    }
+    .styled div {
+        margin-bottom: 10px;
+    }
+}
+@media (max-width: 768px) {
+    body {
+        min-width: initial !important;
+    }
+    .wrapper {
+        width: 90%;
+    }
+    .styled div {
+        margin-bottom: 10px;
+        font-size: 34px;
+        font-size: 68px;
     }
 
-    /* Extra Small Devices, Phones */ 
-    @media only screen and (min-width : 480px) {
-        .styled {
-			padding: 90px 0 40px;
-		}
+    .styled div span {
+        font-size: 14px;
     }
+    #Content h2 {
+        display: block;
+        margin: 25px auto;
+        padding: 0px;
+        /* text-align: center; */
+        font-size: 42px;
+        font-weight: 300;
+    }
+    .form-title {
+        font-size: 28px;
+    }
+}
+@media (max-width: 420px) {
+    h1 {
+        padding-top: 16px;
+        font-size: 48px;
+    }
+    #header {
+        margin-bottom: 30px;
+    }
+    #subscribe input[type="submit"] {
+        margin-top: 10px;
+    }
+    #subscribe input {
+        width: 80%;
+    }
+    footer {
+        position: relative !important;
+    }
+    .form-title {
+        font-size: 24px;
+    }
+    #Content h2 {
+        font-size: 28px;
+    }
+}
 
-    /* Small Devices, Tablets */
-    @media only screen and (min-width : 768px) {
-        .styled {
-			padding: 90px 0 40px;
-		}
+@media (max-width: 360px) {
+    .button_1623083733844 {
+        font-size: 22px;
     }
+    .form-title {
+        font-size: 22px;
+    }
+    h1 {
+        font-size: 40px;
+    }
+}
 
-    /* Medium Devices, Desktops */
-    @media only screen and (min-width : 992px) {
-		.wrapper{
-		   width:100%;
-			margin:0 15px;
-		}
-		.styled {
-			padding: 90px 0 40px;
-		}
-    }
+/*==========  Mobile First Method  ==========*/
 
-    /* Large Devices, Wide Screens */
-    @media only screen and (min-width : 1200px) {
-		.wrapper{
-			width:1170px;
-			margin: 0 auto;
-		}
-		.styled {
-			padding: 90px 0 40px;
-		}
+/* Custom, iPhone Retina */
+@media only screen and (min-width: 320px) {
+}
+
+/* Extra Small Devices, Phones */
+@media only screen and (min-width: 480px) {
+    .styled {
+        padding: 90px 0 40px;
     }
+}
+
+/* Small Devices, Tablets */
+@media only screen and (min-width: 768px) {
+    .styled {
+        padding: 90px 0 40px;
+    }
+}
+
+/* Medium Devices, Desktops */
+@media only screen and (min-width: 992px) {
+    .wrapper {
+        width: 100%;
+        margin: 0 15px;
+    }
+    .styled {
+        padding: 90px 0 40px;
+    }
+}
+
+/* Large Devices, Wide Screens */
+@media only screen and (min-width: 1200px) {
+    .wrapper {
+        width: 1170px;
+        margin: 0 auto;
+    }
+    .styled {
+        padding: 90px 0 40px;
+    }
+}
